# Project-ACIE-v1

./: .env.example  .gitignore  Dockerfile.production  EXPANSION_QUICKSTART.md  EXPANSION_ROADMAP.md  FIXES.md  Makefile  OFFICIAL_DOCUMENTATION.md  README.md  docker-compose.production.yml  requirements.txt  setup.py  walkthrough.md
DOCUMENTATION/: API_REFERENCE.md  CLI_GUIDE.md  CUDA_GUIDE.md  CUDA_MIGRATION.md  EXPANSION_ROADMAP.md
SETUP ASSIST/: ACIE_Colab_Training.ipynb  COLAB_TRAINING_GUIDE.md  prepare_for_colab.sh
acie/: __init__.py  cli.py  cli_legacy.py
acie_sdk/: __init__.py  client.py  exceptions.py
asm/: Makefile  README.md  __init__.py  acie_asm_wrapper.c  asm_python.py  libacie_asm.dylib  matrix_kernels.asm
config/: aggressive_config.yaml  default_config.yaml  dev_config.yaml  gpu_config.yaml
cuda/: Makefile  README.md  cuda_physics.py  physics_constraints.cu  physics_constraints_cpu.cpp
database/: Dockerfile  schema.sql
docs/: COLAB_GUIDE.md  COLAB_TRAINING_GUIDE.md  REMOTE_TRAINING.md
examples/: kafka_demo.py  rag_demo.py  sdk_advanced.py  sdk_demo.py  sdk_quickstart.py
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
java/: .gitignore  Dockerfile  IDE_NOTES.md  pom.xml
k8s/: README.md  configmap.yaml  deployment.yaml  frontend-deployment.yaml  hpa.yaml  ingress.yaml  java-deployment.yaml  namespace.yaml  postgres.yaml  pvc.yaml  redis.yaml  (+3 more)
rust/: Cargo.toml
rust/src/: acie_crypto.rs  data_loader.rs  lib.rs  physics.rs  scm_graph.rs  sparse.rs  tensor_ops.rs
(+421 files in other folders)
