[package]
name = "acie-core"
version = "0.1.0"
edition = "2021"
authors = ["ACIE Team"]

[lib]
name = "acie_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core numerical
ndarray = { version = "0.15", features = ["rayon"] }
ndarray-linalg = "0.16"
rayon = "1.10"
petgraph = "0.6"

# Python Bindings
pyo3 = { version = "0.20", features = ["extension-module"] }
numpy = "0.20"

# Crypto Acceleration
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2"
rand = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
